[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microsandbox"
version = "0.1.8"
description = "Microsandbox Python SDK"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "Microsandbox Team", email = "team@microsandbox.dev" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["aiohttp>=3.10.0,<3.13.0", "frozenlist>=1.4.0", "python-dotenv"]

[project.urls]
Homepage = "https://github.com/microsandbox/microsandbox/"
Repository = "https://github.com/microsandbox/microsandbox/"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "build>=0.8.0",
    "twine>=4.0.0",
]
